# atlas-gardener

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  controller-failure-evidence.yml  controller.yml  gardener-automerge-gate.yml
docs/: adding-a-fixer.md  allowed-fixers.md  automatic-controller.md  autonomous-canary-verification.md  future-github-pr-model.md  github-app-pr-adapter.md  github-app-provider-rollout-checklist.md  ownership.md  production-hardening.md  target-gate-caller.md  threat-model.md
examples/: action-pins.json  finding.workflow-timeout.json
scripts/: build_gardener_file_evidence.py  check-github-app-token-formats.sh  gardener_automerge_gate.py  gardener_gate_marker.py  run_automatic_controller.py  setup-automatic-controller.sh  verify_gardener_canary.py  verify_gardener_production_rollout.py  verify_gardener_rollout.py  verify_gardener_target_readiness.py  write_controller_error_evidence.py
src/atlas_gardener/: cli.py  (+19 more)
tests/: __init__.py  helpers.py  test_app_author_identity.py  test_automatic_github.py  test_automation.py  test_automerge_gate.py  test_canary_verifier.py  test_cli_output.py  test_contracts.py  test_controller.py  test_controller_entrypoint.py  test_dependabot_rollout.py  test_engine.py  test_file_evidence.py  test_fixers.py  test_gate_status.py  test_github_app_auth.py  test_github_app_pr.py  test_github_app_token_formats.py  test_production_rollout_verifier.py  test_production_schedule.py  test_repository.py  test_rollout_verifier.py  test_safety.py  test_target_readiness_verifier.py  test_write_targets.py
(+4 files in other folders)
