[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-gardener"
version = "0.1.0"
description = "Prepare safe, deterministic, PR-only Atlas Systems remediation proposals"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Atlas Reaper" }]
dependencies = []

[project.scripts]
atlas-gardener = "atlas_gardener.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["atlas_gardener*"]
