[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-gardener"
version = "0.4.0"
description = "Policy-bound deterministic Atlas Systems remediation controller"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Atlas Reaper" }]
dependencies = []

[project.scripts]
atlas-gardener = "atlas_gardener.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["atlas_gardener*"]
